# Auswertung_Doktorarbeit

./: Cargo.toml  README.md  plot_heatmaps.sh
sir_compareR/: Cargo.toml  README.md
sir_compareR/src/: analyse.rs  heatmap2.rs  heatmap_generic.rs  hist_analyser.rs  histogram.rs  main.rs  parse_cmd.rs  parse_files.rs  stats.rs
sir_compareR/src/heatmap2/: heatmap2_worker.rs  parse_collect.rs
sir_compareR/src/heatmap_generic/: analyzer.rs  helper.rs
sir_compareR/src/hist_analyser/: helper.rs  parse_files.rs
sir_compareR/src/histogram/: hist_calc.rs  hist_helper.rs  hist_parse_files.rs
sir_norm_density/: Cargo.toml
sir_norm_density/src/: integral.rs  main.rs  parse_file.rs  rate_function.rs
sir_plotter/: Cargo.toml
sir_plotter/src/: main.rs
sir_printer/: Cargo.toml
sir_printer/src/: main.rs
sir_rate/: Cargo.toml
sir_rate/src/: main.rs  pdf_to_rate.rs  rate_to_pdf.rs
src/: analyse.rs  calc.rs  heatmap2.rs  main.rs  parse_cmd.rs  parse_files.rs  stats.rs
src/heatmap2/: parse_collect.rs
src/histogram/: hist_calc.rs  hist_helper.rs
