[package]
name = "sir_compare_r"
version = "0.1.6"
authors = ["Yannick Feld <yannick.feld@uol.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0", features = ["cloudflare_zlib"], default-features = false }
structopt = "0.3"
glob = "0.3.0"
average = "0.10.4"
indicatif = {version = "0.15", features = ["improved_unicode", "rayon"]}
rayon = "1.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 8
rpath = false
