[package]
name = "sir_compare_r"
version = "0.5.1"
authors = ["Yannick Feld <yannick.feld@uol.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0", features = ["cloudflare_zlib"], default-features = false }
net_ensembles = { git = "https://github.com/Pardoxa/net_ensembles", rev = "34cb1274e46b574ea7e240c3830957e4edfa7809" }
#net_ensembles = {path = "../../net_ensembles" }
structopt = "0.3"
glob = "0.3.0"
average = "^0.10.4"
indicatif = {version = "0.15", features = ["improved_unicode", "rayon"]}
rayon = "1.3"
GSL = "1.1.0"
rust-lzma = "0.5.1"
rand_pcg = { version = "0.2.1"}
rand = "0.7"
num-traits = "0.2.12"
ord_subset = "3"
either = "1.6.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
codegen-units = 8
rpath = false
