[package]
name = "sir_compare_r"
version = "0.7.2"
authors = ["Yannick Feld <yannick.feld@uol.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0", features = ["cloudflare_zlib"], default-features = false }
sampling = { git = "https://github.com/Pardoxa/sampling", rev = "a4c33037dab7a90aa2ca3339e1ad7bb51caa7fc6", default-features = false, features = ["bootstrap"] }
#sampling = {path = "../../sampling", default-features = false, features = ["bootstrap"] }
structopt = "0.3"
glob = "0.3.0"
average = "^0.10.4"
indicatif = {version = "0.15", features = ["improved_unicode", "rayon"]}
rayon = "1.3"
GSL = "1.1.0"
rust-lzma = "0.5.1"
rand_pcg = { version = "0.2.1"}
rand = "0.7"
num-traits = "0.2.12"
ord_subset = "3"
either = "1.6.1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
codegen-units = 8
rpath = false
