[package]
name = "sir_norm_density"
version = "0.1.0"
authors = ["Yannick Feld <yannick.feld@uol.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3.17"
glob = "^0.3.0"

[profile.release]
lto = true